# Toy_Scheme_Compiler

./: .gitignore  CMakeLists.txt  README.md  dockerfile  update_readme.sh
examples/: test.scm
include/: lexer.hpp  token.hpp
include/backend/: assembly_instructions.hpp  assembly_program.hpp  toolchain.hpp  x86_64_emitter.hpp  x86_64_printer.hpp  x86_emitter.hpp  x86_printer.hpp
include/core/: core_error.hpp  core_expr.hpp  core_printer.hpp  core_program.hpp  core_validator.hpp  lowerer.hpp
include/runtime/: environment.hpp  evaluator.hpp  value.hpp
include/support/: asserts.hpp  error.hpp  panic.hpp  result.hpp
include/syntax/: parser.hpp  program.hpp  s_expr.hpp  syntax_printer.hpp  syntax_program.hpp
src/: main.cpp
src/backend/: toolchain.cpp  x86_64_emitter.cpp  x86_64_printer.cpp
src/core/: core_printer.cpp  core_validator.cpp  lowerer.cpp
src/lexer/: lexer.cpp
src/runtime/: environment.cpp  evaluator.cpp  value.cpp
src/support/: error.cpp  panic.cpp
src/syntax/: parser.cpp  syntax_printer.cpp
